As we advertise support of jquery >1.7, then test with it.

--- a/tests/index.html
+++ b/tests/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>jinplace qunit tests</title>
     <link rel="stylesheet" href="qunit.css">
-    <script src="jquery-1.10.1.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"></script>">
     <script src="../js/jinplace.js"></script>
 </head>
 <body>
